scrollbar fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,7 +17,7 @@
 }
 
 .carousel.carousel-slider {
-  width: 100vw !important;
+  width: 99.5vw !important;
 }
 
 body {
